# gx-train

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: config.yaml  config.yaml.back
configs/callback/: early_stopping.yaml  lr_monitor.yaml
configs/data/: cifar10.yaml  custom.yaml
configs/logger/: wandb.yaml
configs/model/: classfication_dnn.yaml  regression_dnn.yaml  resnet18.yaml  resnet34.yaml  simple_cnn.yaml  swin_small.yaml  tf_efficientnet_b4.yaml  tf_efficientnetv2_m.yaml
configs/optimizer/: adam.yaml  sgd.yaml
configs/scheduler/: exponential_lr.yaml  step_lr.yaml
configs/trainer/: trainer.yaml
src/: .env.template  baseline_code.ipynb  cv-classification-tune.ipynb  cv-classification-viewer.ipynb  cv-classification.ipynb  cv-classification.py  inescapable_net.ipynb  main.ipynb  main.py  main2.ipynb  main3.ipynb  main4.ipynb  regression.ipynb  regression.py  test.ipynb  test.py
src/dataset/: AugmentImageManager.py  CustomRandomHorizontalFlip.py  CvImageDataset.py  CvImageDatasetFast.py  CvImageDatasetFastEx.py  FullAugraphyPipeline.py  FullAugraphyPipelineQueue.py  FullAugraphyPipelineQueueEx.py  HousePricingDataset.py  ImageDataset.py  MemoryImageSource.py  MemoryImageSourceEx.py  SimpleRegressionDataset.py
src/models/: CNN.py  ClassificationDNN.py  CustomModel.py  CustomModelEx.py  RegressionDNN.py  tune_model.py
src/utils/: config.py  utils.py
